--- a/metadata.yaml
+++ b/metadata.yaml
@@ -84,6 +84,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Sontag, Henriette, 1806-1854'
 - !lcc 'ML'
+- GITenberg
 title: "Life of Henriette Sontag, Countess de Rossi.\r\nwith Interesting Sketches\
   \ by Scudo, Hector Berlioz, Louis Boerne, Adolphe Adam, Marie Aycard, Julie de Margueritte,\
   \ Prince Puckler-Muskau & Theophile Gautier."
